Updated project cards to 'Releasing Soon' and added Own Nutrition testimonial

--- a/index.html
+++ b/index.html
@@ -523,15 +523,18 @@
                         <div
                             class="absolute inset-0 bg-primary/40 group-hover:bg-primary/20 transition-colors duration-300">
                         </div>
+                        <!-- Coming Soon Badge -->
+                        <div class="absolute top-4 right-4 z-20">
+                            <span
+                                class="px-3 py-1 bg-secondary text-primary text-[10px] font-bold uppercase tracking-widest rounded-full shadow-gold">Coming
+                                Soon</span>
+                        </div>
                     </div>
                     <div
                         class="absolute inset-0 bg-primary/90 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col items-center justify-center p-6 text-center backdrop-blur-sm">
                         <h4
-                            class="text-2xl font-bold text-white mb-2 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
-                            Vivid Portfolio</h4>
-                        <p
-                            class="text-secondary text-sm translate-y-4 group-hover:translate-y-0 transition-transform duration-300 delay-75">
-                            Creative • Personal Brand</p>
+                            class="text-3xl font-bold text-white mb-2 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
+                            Releasing Soon</h4>
                     </div>
                 </div>
 
@@ -545,15 +548,18 @@
                         <div
                             class="absolute inset-0 bg-primary/40 group-hover:bg-primary/20 transition-colors duration-300">
                         </div>
+                        <!-- Coming Soon Badge -->
+                        <div class="absolute top-4 right-4 z-20">
+                            <span
+                                class="px-3 py-1 bg-secondary text-primary text-[10px] font-bold uppercase tracking-widest rounded-full shadow-gold">Coming
+                                Soon</span>
+                        </div>
                     </div>
                     <div
                         class="absolute inset-0 bg-primary/90 opacity-0 group-hover:opacity-100 transition-opacity duration-300 flex flex-col items-center justify-center p-6 text-center backdrop-blur-sm">
                         <h4
-                            class="text-2xl font-bold text-white mb-2 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
-                            AppNext</h4>
-                        <p
-                            class="text-secondary text-sm translate-y-4 group-hover:translate-y-0 transition-transform duration-300 delay-75">
-                            Mobile App • UI Kit</p>
+                            class="text-3xl font-bold text-white mb-2 translate-y-4 group-hover:translate-y-0 transition-transform duration-300">
+                            Releasing Soon</h4>
                     </div>
                 </div>
             </div>
@@ -631,7 +637,7 @@
                 <h3 class="text-4xl font-bold text-white">Client Affirmations</h3>
             </div>
 
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Review 1 -->
                 <div class="glass-card p-8 rounded-2xl relative fade-in-section">
                     <i class="fas fa-quote-right absolute top-8 right-8 text-4xl text-white/5"></i>
@@ -644,7 +650,7 @@
                     <div class="flex items-center">
                         <div
                             class="w-10 h-10 bg-slate-700 rounded-full flex items-center justify-center text-white font-bold mr-3 border border-white/10">
-                            JD</div>
+                            MJ</div>
                         <div>
                             <h5 class="font-bold text-white text-sm">Marhaban Gold Jewellery</h5>
                             <!-- <span class="text-xs text-gray-500">CEO</span> -->
@@ -664,7 +670,7 @@
                     <div class="flex items-center">
                         <div
                             class="w-10 h-10 bg-slate-700 rounded-full flex items-center justify-center text-white font-bold mr-3 border border-white/10">
-                            SR</div>
+                            AR</div>
                         <div>
                             <h5 class="font-bold text-white text-sm"> Adak soul restaurant</h5>
                             <!-- <span class="text-xs text-gray-500">Founder, Glow Cosmetics</span> -->
@@ -684,10 +690,30 @@
                     <div class="flex items-center">
                         <div
                             class="w-10 h-10 bg-slate-700 rounded-full flex items-center justify-center text-white font-bold mr-3 border border-white/10">
-                            MK</div>
+                            VE</div>
                         <div>
                             <h5 class="font-bold text-white text-sm">Vaz Enterprises</h5>
                             <!-- <span class="text-xs text-gray-500">Director, King Estates</span> -->
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Review 4 -->
+                <div class="glass-card p-8 rounded-2xl relative fade-in-section delay-300">
+                    <i class="fas fa-quote-right absolute top-8 right-8 text-4xl text-white/5"></i>
+                    <div class="flex items-center space-x-1 text-secondary text-sm mb-4">
+                        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i
+                            class="fas fa-star"></i><i class="fas fa-star"></i>
+                    </div>
+                    <p class="text-gray-400 italic mb-6">"Working with AER2Connect for our Own Nutrition website was a
+                        game-changer. The design is clean, conversion-focused, and perfectly aligned with our brand
+                        identity. The user experience and performance exceeded our expectations."</p>
+                    <div class="flex items-center">
+                        <div
+                            class="w-10 h-10 bg-slate-700 rounded-full flex items-center justify-center text-white font-bold mr-3 border border-white/10">
+                            ON</div>
+                        <div>
+                            <h5 class="font-bold text-white text-sm">Own Nutrition</h5>
                         </div>
                     </div>
                 </div>
