Remove one member from Meet Our Team section

--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                     </div>
                 </div>
 
-                <!-- Member 2: Chief Executive Officer (CEO) -->
+                <!-- Member 2: Chief Executive Officer (CEO) & Co-Founder -->
                 <!--Nithya Sree  -->
                 <div
                     class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section delay-100">
@@ -761,7 +761,7 @@
                             class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
                     </div>
                     <h4 class="text-xl font-bold text-white mb-1">Nithya Sree</h4>
-                    <p class="text-secondary text-sm font-medium mb-4">Chief Executive Officer (CEO)</p>
+                    <p class="text-secondary text-sm font-medium mb-4">Chief Executive Officer (CEO) & Co-Founder</p>
                     <div class="flex justify-center space-x-4">
                         <a href="https://www.linkedin.com/in/nithyasree-" target="_blank"
                             class="text-gray-400 hover:text-secondary transition-colors"><i
@@ -770,25 +770,7 @@
                     </div>
                 </div>
 
-                <!-- Member 3: digital presence manager -->
-                <!-- mame Lucia Maxi -->
-                <div
-                    class="glass-card p-8 rounded-2xl text-center hover-lift transition-all duration-300 fade-in-section delay-100">
-                    <div
-                        class="w-32 h-32 mx-auto rounded-full overflow-hidden mb-6 border-2 border-secondary shadow-gold relative group">
-                        <!-- Placeholder Image  -->
-                        <img src="./assets/images/maxim.jpeg" alt="mame Lucia Maxi"
-                            class="w-full h-full object-cover transition-transform duration-500 group-hover:scale-110">
-                    </div>
-                    <h4 class="text-xl font-bold text-white mb-1">Mame Lucia Maxi </h4>
-                    <p class="text-secondary text-sm font-medium mb-4">Digital presence manager</p>
-                    <div class="flex justify-center space-x-4">
-                        <a href="https://www.linkedin.com/in/lucia-maxim-a4a1161a2/" target="_blank"
-                            class="text-gray-400 hover:text-secondary transition-colors"><i
-                                class="fab fa-linkedin-in text-lg"></i></a>
 
-                    </div>
-                </div>
                 <!--Project manager  -->
                 <!-- Himanshu Jha -->
                 <div
